# fatty-traders-cpp

./: .gitignore  CMakeLists.txt  README.md  setup_ib_api.sh
.claude/: settings.local.json
config/: settings.json
src/: ConnectionStatusGUI.cpp  ConnectionStatusGUI.h  IBConnector.cpp  IBConnector.h  OrderManager.h  TradingApp.cpp  TradingApp.h  main.cpp  main_gui.cpp
